cirq-grammar/test/corpus/params_and_lets.txt
================================================================================
Parameters with defaults
================================================================================

circuit test {
    param vdd = 3.3
    param r_load = 10k
}

--------------------------------------------------------------------------------

(source_file
  (circuit_decl
    name: (identifier)
    (param_decl
      name: (identifier)
      value: (number_literal))
    (param_decl
      name: (identifier)
      value: (number_literal))))

================================================================================
Parameters without defaults
================================================================================

module amp {
    param gain
    param bandwidth = 1M
}

--------------------------------------------------------------------------------

(source_file
  (module_decl
    name: (identifier)
    (param_decl
      name: (identifier))
    (param_decl
      name: (identifier)
      value: (number_literal))))

================================================================================
Typed parameters
================================================================================

circuit test {
    param mode: string = "fast"
    param count: int = 10
}

--------------------------------------------------------------------------------

(source_file
  (circuit_decl
    name: (identifier)
    (param_decl
      name: (identifier)
      type: (identifier)
      value: (string_literal))
    (param_decl
      name: (identifier)
      type: (identifier)
      value: (number_literal))))

================================================================================
Let bindings with expressions
================================================================================

circuit test {
    param r1 = 10k
    param r2 = 20k
    let r_parallel = (r1 * r2) / (r1 + r2)
    let f_cutoff = 1 / (2 * pi * r1 * 100n)
}

--------------------------------------------------------------------------------

(source_file
  (circuit_decl
    name: (identifier)
    (param_decl
      name: (identifier)
      value: (number_literal))
    (param_decl
      name: (identifier)
      value: (number_literal))
    (let_decl
      name: (identifier)
      value: (binary_expression
        left: (paren_expression
          (binary_expression
            left: (identifier)
            right: (identifier)))
        right: (paren_expression
          (binary_expression
            left: (identifier)
            right: (identifier)))))
    (let_decl
      name: (identifier)
      value: (binary_expression
        left: (number_literal)
        right: (paren_expression
          (binary_expression
            left: (binary_expression
              left: (binary_expression
                left: (number_literal)
                right: (identifier))
              right: (identifier))
            right: (number_literal)))))))

================================================================================
Parameters with attributes
================================================================================

circuit test {
    @range(0, 1)
    param coupling = 0.5

    @positive
    @description("load resistance")
    param r_load = 10k
}

--------------------------------------------------------------------------------

(source_file
  (circuit_decl
    name: (identifier)
    (param_decl
      (attribute
        name: (identifier)
        (argument_list
          (argument (number_literal))
          (argument (number_literal))))
      name: (identifier)
      value: (number_literal))
    (param_decl
      (attribute
        name: (identifier))
      (attribute
        name: (identifier)
        (argument_list
          (argument (string_literal))))
      name: (identifier)
      value: (number_literal))))
